Actualización: Añadido cuadro de chat y funcionalidad básica

--- a/IniciarSesión.html
+++ b/IniciarSesión.html
@@ -41,6 +41,9 @@
                             <div class="text-center mt-3">
                                 <a href="register.html">¿No tienes cuenta? Regístrate</a>
                             </div>
+                            <div class="text-center mt-3">
+                                <a href="welcome.html">Volver a la página principal</a>
+                            </div>                            
                         </form>
                     </div>
                     <div class="tab-pane fade" id="worker" role="tabpanel" aria-labelledby="worker-tab">
