--- a/payments.html
+++ b/payments.html
@@ -15,18 +15,22 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ml-auto">
-                <li class="nav-item">
-                    <a class="nav-link" href="welcome.html">Inicio</a>
-                </li>
                 <li class="nav-item active">
-                    <a class="nav-link" href="#">Pagos y Aportes <span class="sr-only">(actual)</span></a>
+                    <a class="nav-link" href="welcome.html">Inicio <span class="sr-only">(actual)</span></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="payments.html">Pagos y Aportes</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="contact.html">Contacto</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="IniciarSesión.html">Iniciar Sesión</a>
+                </li>
             </ul>
         </div>
     </nav>
+
 
     <div class="container mt-5">
         <div class="row justify-content-center">
