--- a/register.html
+++ b/register.html
@@ -43,8 +43,11 @@
                     </div>
                     <button type="submit" class="btn btn-primary btn-block">Registrarse</button>
                     <div class="text-center mt-3">
-                        <a href="index.html">¿Ya tienes cuenta? Inicia sesión</a>
+                        <a href="IniciarSesión.html">¿Ya tienes cuenta? Inicia sesión</a>
                     </div>
+                    <div class="text-center mt-3">
+                        <a href="welcome.html">Volver a la página principal</a>
+                    </div> 
                 </form>
             </div>
         </div>
