--- a/support.html
+++ b/support.html
@@ -6,6 +6,9 @@
     <title>Soporte</title>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="./css/styles2.css">
+    <style>
+     
+    </style>
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -51,6 +54,27 @@
                 </form>
             </div>
         </div>
+    </div>
+
+    <!-- Widget de chat en vivo -->
+    <div class="chat-widget">
+        <button onclick="toggleChatBox()" class="chat-button">Chat</button>
+    </div>
+
+    <!-- Cuadro de chat simulado -->
+    <div class="chat-box" id="chatBox">
+        <div class="chat-box-header">
+            <span>Soporte en línea</span>
+            <span class="close-chat" onclick="toggleChatBox()">&times;</span>
+        </div>
+        <div class="chat-messages">
+            <div class="user-message">Hola, tengo un problema con...</div>
+            <div class="agent-message">Entiendo, vamos a revisarlo.</div>
+        </div>
+        <form id="chatForm" class="mt-3">
+            <textarea class="form-control" rows="1" placeholder="Escribe tu mensaje..." required></textarea>
+            <button type="submit" class="btn btn-primary mt-2">Enviar</button>
+        </form>
     </div>
 
     <footer class="bg-light text-center py-3 mt-5">
