--- a/welcome.html
+++ b/welcome.html
@@ -16,13 +16,16 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="#">Inicio <span class="sr-only">(actual)</span></a>
+                    <a class="nav-link" href="welcome.html">Inicio <span class="sr-only">(actual)</span></a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="payments.html">Pagos y Aportes</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="contact.html">Contacto</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="IniciarSesión.html">Iniciar Sesión</a>
                 </li>
             </ul>
         </div>
@@ -33,13 +36,46 @@
             <div class="col-md-8">
                 <h2 class="text-center">Bienvenido</h2>
                 <p class="text-center">Bienvenido a la página de usuario. Aquí puedes encontrar información relevante sobre nuestra organización.</p>
-                
-                <section id="about" class="mt-5">
-                    <h3 class="text-center">Acerca de Nosotros</h3>
-                    <p class="text-center">Somos una organización comprometida con el bienestar de nuestros usuarios. Nuestro objetivo es proporcionar los mejores servicios y asistencia a nuestros miembros.</p>
-                </section>
             </div>
         </div>
+    </div>
+
+    <div class="container mt-5">
+        <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+            <ol class="carousel-indicators">
+                <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+            </ol>
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="./img/img1.jpg" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                    <img src="./img/img2.jpg" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                    <img src="./img/img3.jpg" class="d-block w-100" alt="...">
+                </div>
+            </div>
+            <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Anterior</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Siguiente</span>
+            </a>
+        </div>
+    </div>
+
+  
+
+    <div class="container mt-5">
+        <section id="about">
+            <h3 class="text-center">Acerca de Nosotros</h3>
+            <p class="text-center">Somos una organización comprometida con el bienestar integral de nuestros usuarios. En la Fundación Apoyo, nuestro objetivo principal es proporcionar los mejores servicios y asistencia a nuestros miembros, especialmente a las personas de la tercera edad que confían en nosotros para cuidados y apoyo continuo. Nos dedicamos a mejorar la calidad de vida de nuestros residentes y sus familias, ofreciendo un entorno seguro, cálido y respetuoso que promueve la dignidad y el confort en cada etapa de sus vidas. Nuestro compromiso se refleja en cada aspecto de nuestra operación, desde la atención personalizada hasta la implementación de tecnología avanzada para asegurar un cuidado efectivo y eficiente.</p>
+        </section>
     </div>
 
     <footer class="bg-light text-center py-3 mt-5">
