--- a/payments.html
+++ b/payments.html
@@ -31,7 +31,6 @@
         </div>
     </nav>
 
-
     <div class="container mt-5">
         <div class="row justify-content-center">
             <div class="col-md-8">
@@ -54,9 +53,9 @@
                     </div>
                     <div class="form-group">
                         <label for="amount">Monto:</label>
-                        <input type="number" class="form-control" id="amount" name="amount" placeholder="Ingrese el monto" required>
+                        <input type="number" class="form-control" id="amount" name="amount" placeholder="Ingrese el monto" min="0" required>
                         <div class="invalid-feedback">
-                            Por favor ingrese el monto.
+                            Por favor ingrese un monto válido.
                         </div>
                     </div>
                     <div class="form-group">
