--- a/worker_dashboard.html
+++ b/worker_dashboard.html
@@ -15,6 +15,9 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ml-auto">
+                <li class="nav-item">
+                    <a class="nav-link" href="welcome.html">Pagina De Bienvenida</a>
+                </li>
                 <li class="nav-item active">
                     <a class="nav-link" href="worker_dashboard.html">Dashboard del Trabajador <span class="sr-only">(actual)</span></a>
                 </li>
